--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>feliz cum anthony</title>
+    <title>¡feliz cum!</title>
     <link rel="icon" type="image" href="cartman.png">
 </head>
 <body>
 
-    <h1>Titulo</h1>
-    <h2>Subtítulo</h2>
-    <p>Textito</p>
-    <div class="Inspo">
-        <h6>Inspo</h6>
-        <a href="http://www.rleonardi.com/">Robby Leonardi</a>
+    <h1>hola anthony</h1>
+    <h2>cositas de anthony</h2>
+    <p>esto es muy divertido no estoy prestando atención en clase</p>
+    <div class="aaa">
     </div>
 </body>
 </html>
