--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
     <title>¡feliz cum!</title>
 </head>
 <body>
-
-    <h1>hola anthony</h1>
-    <h2>cositas de anthony</h2>
-    <p>esto es muy divertido no estoy prestando atención en clase</p>
-    <div class="aaa">
+    <div class="header">
+        <img src="images/cartman.png" alt="psg">
+    </div>
+    <div class="principal">
+        <h1>hola anthony</h1>
+    </div>
+    <div class="cositas">
+        <img src="images/psg.jpg" alt="psg">
+        <h2>psg</h2>
+    </div>
+    <div class="footer">
+        <h6>inspo</h6>
+        <a href="https://es.psg.fr/">psg</a>
     </div>
 </body>
 </html>
