--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="icon" type="image" href="images/cartman.png"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>¡feliz cum!</title>
 </head>
 <body>
-    <div class="header">
-        <img src="images/cartman.png" alt="psg">
+    <div class="header1">
+        <button type="button" class="btn btn-outline-light">home</button>
+        <button type="button" class="btn btn-outline-light">fotitos</button>
     </div>
+    <div class="header2">
+        <img src="images/psg.jpg" class="rounded mx-auto d-block" alt="psg">
+    </div>
+    </nav>
     <div class="principal">
         <h1>hola anthony</h1>
     </div>
