ya pero ya no se ve tan mal

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 </head>
 <body>
     <div class="header1">
-        <button type="button" class="btn btn-outline-light">home</button>
-        <button type="button" class="btn btn-outline-light">fotitos</button>
+        <p>si tarado, nos caes re mal y esperamos que sufras hoy</p>
     </div>
     <div class="header2">
         <img src="images/psg.jpg" class="rounded mx-auto d-block" alt="psg">
     </div>
     </nav>
-    <div class="principal">
-        <h1>hola anthony</h1>
+    <div class="row g-0">
+        <div class="col-7">
+            <img src="images/anthony.jpg" class="img-fluid" alt="anthony">
+        </div>
+        <div class="col">
+            <p>primera fotito</p>
+            <h1>aqui un anthony salvaje vibin en tambopata</h1>
+        </div>
     </div>
     <div class="cositas">
-        <img src="images/psg.jpg" alt="psg">
         <h2>psg</h2>
     </div>
     <div class="footer">
