--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
         <div class="row gx-4">
             <div class="card mb-3 col">
-                <img src="images/img4.JPG" class="card-img-top" alt="...">
+                <img src="images/img4.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text"><small class="text-muted">1° octubre de 2018</small></p>
                     <h5 class="card-title">
