--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </div>
             </div>
             <div class="card mb-3 col">
-                <img src="images/img9.jpg" class="card-img-top" alt="...">
+                <img src="images/img9.JPG" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text"><small class="text-muted">23° agosto de 2019</small></p>
                     <h5 class="card-title">
@@ -319,7 +319,7 @@
             </div>
             <div class="col-3">
                 <h6>creado por:</h6>
-                <p>pajas :)</p>
+                <p>pajas porque somos cheveres grcs :)</p>
             </div>
             <div class="col-6">
                 <h6>notitas:</h6>
