--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@
             <div class="card mb-3 col">
                 <img src="images/img9.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <p class="card-text"><small class="text-muted">23° agosto de 2019</small></p>
+                    <p class="card-text"><small class="text-muted">1° mayo de 2021</small></p>
                     <h5 class="card-title">
                         <!-- Button trigger modal -->
                         <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            asco me das
+                            lentes
                         </button>
                         
                         <!-- Modal -->
