quieres funcionar? grcs

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </div>
             </div>
             <div class="card mb-3 col">
-                <img src="images/img9.jpg" class="card-img-top" alt="...">
+                <img src="images/img9..jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text"><small class="text-muted">1° mayo de 2021</small></p>
                     <h5 class="card-title">
