que es esto JAJJAJAJ

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-                textito 
+                ya bueno lo mismo de siempre. feliz cum imbecil. nos importas un poquito nomas. para nada nos acordamos de tu cumple 
+                asi que no te subas pls. el simple hehcho de escribir esto me da cringe ayuda. ups, me voy por las ramas. ptmr espero 
+                por tu bien que hayas visto el menu primero porque sino te castro. mnt, no me puedo poner agresiva hoy. bueno, tu solo 
+                presiona el titulo de las fotitos y enjoy? ns que mrd mas poner 
             </div>
         </div>
     </div>
@@ -319,14 +322,16 @@
             </div>
             <div class="col-3">
                 <h6>creado por:</h6>
-                <p>pajas porque somos cheveres grcs :)</p>
+                <p>pajas porque somos cheveres, grcs :)</p>
             </div>
             <div class="col-6">
                 <h6>notitas:</h6>
                 <ul>
-                    <li>omg ahora si se ve mas o menos bien en el cel</li>
+                    <li>omg ahora si se ve mas o menos bien en el cel porque ya tiene responsive</li>
                     <li>no hay tildes ni mayusculas porque asi esta mejor jiji</li>
-                    <li>yo se que es super basic pero hice lo que pude</li>
+                    <li>funi porque el boton de la personita en el header no funciona</li>
+                    <li>si tan solo leyeran los nombres que les puse a mis commits</li>
+                    <li>yo se que es super basic y que mi codigo esta ordenado de la peor manera posible pero hice lo que pude</li>
                     <li>ah si, un agradecimiento especial a bootstrap y a google fotos porque no la hacía sin eso</li>
                 </ul>
             </div>
