anthony no me pasa sticker aaa

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
                 <ul>
                     <li>nombre: anthony alejandro mariño carbonel</li>
                     <li>edad: omg ya tienes 17 o casi, depende de cuando veas esto</li>
-                    <li>fecha de nacimiento: creo que 11 de diciembre de 2004 pero no estoy segura</li>
+                    <li>fecha de nacimiento: 11 de diciembre de 2005... ah no perdon 2004</li>
+                    <li>cosas favoritas: bueno, futbol ps, por eso la pagina inspirada en tu bonito equipo</li>
+                    <li>skills: no sabe cocinar, organizacion inexistente, le cuesta escribir bonito, dice wbd y media, sigue la conversacion de la nada, 
+                        se mete 100 push-ups en un minuto, no sabe perrear, tipea fast
+                    </li>
+                    <li>skills, pero ahora si enserio: friend re supportive, te hace reir en cualquier momento, siempre te escucha sin importar que se lo hayas dicho cien veces</li>
                 </ul>
             </div>
           </div>
@@ -154,7 +159,7 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>aaa</p>
+                                        <p>Habla pe mongol. Esto es para decirte mas que nada que eres un patasa y que se aprecian todos estos años de amistad. A lo largo de la misma hemos aprendido mucho de ti, pero lo que resalta mas es lo PISADASO que eres, que bestia.Nmnt, son cositas, tu solo sigue siendo como eres q esta dptm. Feliz cumple🤑</p>
                                     </div>
                                 </div>
                             </div>
@@ -183,7 +188,11 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>aaa</p>
+                                        <p>bueno, este, tu ya sabes que no soy buena para escribir estas cositas. simplemente no va conmigo. 
+                                            por algo hice una website en vez de una cartita como te habia dicho. jiji ups. en resumidas cuentas: no me caes (de 
+                                            hecho me das asco), te odio, no te quiero en mi vida, deberias morirte, no me importas nada y ten el peor cumpleaños del mundo. 
+                                            bueno, ya sabes que lo que quise decir esta al reves. grcs por tu atencion, bai.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -206,11 +215,11 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">a</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">y bueno...</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>a</p>
+                                        <p>...ves porque decimos que eres re random 🤪</p>
                                     </div>
                                 </div>
                             </div>
@@ -233,11 +242,11 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">title</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">ya, pero</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>literalmente yo cuando</p>
+                                        <p>¿anthony vegan?</p>
                                     </div>
                                 </div>
                             </div>
@@ -289,11 +298,11 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">title</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">un genio que es medio bruto</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>ahora</p>
+                                        <p>es que como ganas tercer puesto en el dsd1 y despues dices "agua liquida" o "sino que tambien incluso"</p>
                                     </div>
                                 </div>
                             </div>
@@ -316,11 +325,11 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">title</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">lentecitos</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>textito</p>
+                                        <p>modo intelectual</p>
                                     </div>
                                 </div>
                             </div>
