por finn commit final creo

--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">title</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">vibes de...</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                        <p>ya pero</p>
+                                        <p>...que harias si esta noche te seduzco en mi coche</p>
                                     </div>
                                 </div>
                             </div>
